Additional fixing of home hero #31
Make tablet the breakpoint instead of desktop because of the links taking too much vertical space otherwise. Have the masthead vertically centered.

--- a/assets/site/home.scss
+++ b/assets/site/home.scss
@@ -20,7 +20,7 @@ section#hero {
     position: relative;
     width: 100vw;
     max-width: 100vw;
-    height: 90svh;
+    height: max(90svh, 23em);
     color: #FDE8C3;
     line-height: $minimum-line-height;
     > div {
@@ -36,10 +36,13 @@ section#hero {
         object-fit: cover;
         object-position: 75% 55%;
     }
-    .logo {
+    #masthead {
         position: absolute;
         top: 0;
         left: 0;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
 
         background: linear-gradient(to bottom right, transparent 25%, #277C8FC0),
             linear-gradient(to bottom left, transparent 25%, #24A699F0),
@@ -47,24 +50,27 @@ section#hero {
         background-blend-mode: multiply;
         -webkit-backdrop-filter: blur(2px);
         backdrop-filter: blur(2px);
-
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: min-content;
-        align-content: center;
-        gap: .3rem;
-
         width: 50%;
         padding: 0 1.5rem 0 $minimum-side-padding;
-        @include breakpoint(mobile) {
+        @include breakpoint(tablet) {
             width: 100%;
             padding-right: $minimum-mobile-side-padding;
             padding-left: $minimum-mobile-side-padding;
-            justify-items: center;
             background: linear-gradient(to bottom right, transparent 25%, #277C8FD0),
                 linear-gradient(to bottom left, transparent 25%, #24A699D0),
-                radial-gradient(circle,  transparent, #{$brand-blue}80);
-            grid-template-rows: unset;
+                radial-gradient(circle, transparent, #{$brand-blue}80);
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    .logo {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: min-content;
+        gap: .3rem;
+
+        @include breakpoint(tablet) {
+            justify-items: center;
         }
 
         --home-logo-dome: #FDE8C3;
@@ -73,11 +79,11 @@ section#hero {
         --home-logo-festival: #{$brand-yellow};
 
         #logo-container {
-            padding-top: .5rem;
+            padding-top: 1rem;
             display: flex;
             justify-content: flex-end;
-            @include breakpoint(mobile) {
-                 width: min(50svh,calc(100% - 1.5rem));
+            @include breakpoint(tablet) {
+                 width: min(50svh, calc(100% - 1.5rem));
             }
         }
         #svg-container {
@@ -91,7 +97,7 @@ section#hero {
                 width: 100%;
             }
 
-            @include breakpoint(mobile) {
+            @include breakpoint(tablet) {
                 width: 100%;
                 height: auto;
                 translate: 0%;
@@ -104,31 +110,33 @@ section#hero {
         padding-top: .5rem;
         padding-bottom: .5em;
         font-size: min(1.8rem, max(1rem, 4vh));
-        @include breakpoint(mobile) {
+        @include breakpoint(tablet) {
             padding-right: 0;
-            font-size: min(3rem, max(1rem, 4vh));
+            font-size: min(3rem, 9vw, max(1rem, 4vh));
         }
     }
     #hero-links {
-        text-align: right;
         padding-bottom: 1rem;
-        font-size: min(4vw, 4vh);
         font-weight: 600;
-        letter-spacing: .08em;
-        translate: .08em;
-        @include breakpoint(mobile) {
-            text-align: center;
-        }
         text-transform: uppercase;
+        letter-spacing: .08em;
+        translate: .38em;
+
+        text-align: right;
+        font-size: min(1.1rem, max(.8rem, 3vh));
+        line-height: $standard-line-height;
+        @include breakpoint(tablet) {
+            text-align: center;
+            font-size: min(1.5rem, 5.5vw, max(.8rem, 3.2vh));
+            line-height: 1.5;
+            translate: .08em;
+        }
+
         a, span {
-            line-height: $minimum-line-height;
-            font-size: min(1.1rem, max(.8rem, 3.2vh));
-            @include breakpoint(mobile) {
-                font-size: min(1.5rem, max(.8rem, 3.2vh));
-            }
             color: $brand-lighter-yellow;
             text-decoration: none;
             opacity: 1;
+            padding: 0 .3em;
         }
 
         > * {
@@ -137,11 +145,6 @@ section#hero {
         > * ~ * {
             &:before {
                 content: "•";
-                padding: 0 .5em;
-                font-size: min(1.1rem, max(.8rem, 3.2vh));
-                @include breakpoint(mobile) {
-                    font-size: min(1.5rem, max(.8rem, 3.2vh));
-                }
             }
         }
     }
